# SlashBackSlash

./: .gitignore  .swp  CMakeLists.txt  Interpreter.hs  Lexer.hs  Parser.hs  README.md  build.sh  compiler.hs  run.sh
apps/: add.sbs  helloworld.sbs  io.sbs  io_cat.sbs  io_test.sbs  io_test_large.c  io_test_large.sbs
cpp-interpreter/: CMakeLists.txt  bla.sbs
cpp-interpreter/lib/: io.sbs
cpp-interpreter/src/: ast.h  exec.cpp  exec.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  sbsexception.h
cpp-interpreter/src/model/: binding.h  to_string.h  token.h
cpp-interpreter/tests/: abc.sbst  binding_after_app.sbst  fail.sbst  id_id.sbst  no_rebinding.sbst
doc/: boolean.md  container.md  control_structure.md  controll_structure.md  integer.md  numeral.md  numerals.md
gtksourceview/: sbs.lang
lib/: const.sbs  default.sbs  integer.sbs  io.sbs  lang.sbs  monad.sbs  native.sbs
prove/: dec.sbsp  lang.md
rust/: Cargo.toml  grammar
rust/src/: lexer.rs  main.rs  parser.rs
src/: cli.cpp  cli.h  compiler_c.cpp  compiler_c.h  compiler_il.cpp  compiler_il.h  exec.cpp  exec.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  sbsexception.h
src/model/: ast.cpp  ast.h  binding.h  file_loc.h  il.cpp  il.h  list.h  to_string.cpp  to_string.h  token.h
tests/: alpha_equiv.sbst  id_id.sbst  lambda-style_let.sbst  lang_logic.sbst  lang_num.sbst  lang_tuple.sbst  lang_unit_tests.sbst  test_case_common.sbst  utf8.sbst
unit_tests/: test_lexer.cpp  test_list.cpp  testing.h
